// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ControlArea /> Snapshots renders correctly 1`] = `
<div
  className="control-area"
>
  <a
    className="waves-effect waves-light red lighten-2 btn-small"
    id="exit-game-btn"
    onClick={[Function]}
  >
    Exit
  </a>
</div>
`;

exports[`<ControlArea /> Snapshots renders correctly without Start game button 1`] = `
<div
  className="control-area"
>
  <a
    className="waves-effect waves-light btn-small"
    id="start-game-btn"
    onClick={[MockFunction]}
  >
    Start game
  </a>
  <a
    className="waves-effect waves-light red lighten-2 btn-small"
    id="exit-game-btn"
    onClick={[Function]}
  >
    Exit
  </a>
</div>
`;
